@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <otrs_config version="1.0" init="Framework">
-    <CVS>$Id: Framework.xml,v 1.368 2010-08-30 18:53:46 dz Exp $</CVS>
+    <CVS>$Id: Framework.xml,v 1.369 2010-08-31 10:51:49 mg Exp $</CVS>
     <ConfigItem Name="SecureMode" Required="1" Valid="1" ConfigLevel="200">
         <Description Translatable="1">Disables the web installer (http://yourhost.example.com/otrs/installer.pl), to prevent the system from being hijacked. If set to "No", the system can be reinstalled and the current basic configuration will be used to pre-populate the questions within the installer script. If not active, it also disables the GenericAgent, PackageManager and SQL Box (to avoid the use of destructive queries, such as DROP DATABASE, and also to steal user passwords).</Description>
         <Group>Framework</Group>
@@ -5410,6 +5410,7 @@ Your OTRS Notification Master
                 <Item>Core.Form.IE7.css</Item>
                 <Item>Core.Widget.IE7.css</Item>
                 <Item>Core.WidgetMenu.IE7.css</Item>
+                <Item>Core.Tooltip.IE7.css</Item>
                 <Item>Core.TicketDetail.IE7.css</Item>
                 <Item>Core.Table.IE7.css</Item>
             </Array>
@@ -5506,6 +5507,7 @@ Your OTRS Notification Master
         <Setting>
             <Array>
                 <Item>Core.IE7.css</Item>
+                <Item>Core.Tooltip.IE7.css</Item>
             </Array>
         </Setting>
     </ConfigItem>
