@@ -1,0 +1,20 @@
+/**
+ * @project     OTRS (http://www.otrs.org) - Customer Frontend
+ * @version     $Revision: 1.1 $
+ * @copyright   OTRS AG
+ * @license     AGPL (http://www.gnu.org/licenses/agpl.txt)
+ */
+
+/**
+ * @package     Skin "Default"
+ * @section     Tooltips
+ * @css-for     IE7
+ */
+
+@media screen,projection,tv,handheld {
+
+div.Tooltip > div.Content * {
+    background-color: white;
+}
+
+} /* end @media */
