@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1344 2010-08-31 10:14:40 mg Exp $
+# $Id: CHANGES,v 1.1345 2010-08-31 10:51:49 mg Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 3.0.0 beta3 ????-??-??
+ - 2010-08-31 Fixed bug#5837 - Tooltips have transparent background in IE7.
  - 2010-08-31 Fixed bug#5714 - Selecting a customer in AgentTicketEmail/Phone
     changes "Priority" and "Next ticket state" selections.
  - 2010-08-31 Fixed bug#5791 - When creating a new ticket,
